syntax = "proto3";

option csharp_namespace = "MultiDownloader.DatabaseApi.GrpcHost.Jobs";

import "google/protobuf/timestamp.proto";

service JobService {
  rpc GetJob (JobRequest) returns (JobResponse);
  rpc GetAllJobs (EmptyRequest) returns (JobsResponse);
  rpc GetJobsByUser (JobsByUserRequest) returns (JobsResponse);
  rpc AddJob (AddJobRequest) returns (ResultMessage);
  rpc UpdateJob (UpdateJobRequest) returns (ResultMessage);
  rpc DeleteJob (JobRequest) returns (ResultMessage);
}

message JobRequest {
  int32 jobId = 1;
}

message JobsByUserRequest {
  int64 chatId = 1;
}

message JobResponse {
  int32 jobId = 1;
  string title = 2;
  string url = 3;
  string fileType = 4;
  string source = 5;
  string resultStatus = 6;
}

message JobsResponse {
  repeated JobResponse jobs = 1;
}

message AddJobRequest {
  string title = 1;
  string url = 2;
  string fileType = 3;
  string source = 4;
  string resultStatus = 5;
  int64 chatId = 6;
}

message UpdateJobRequest {
  int32 jobId = 1;
  string title = 2;
  string url = 3;
  string fileType = 4;
  string source = 5;
  string resultStatus = 6;
}

message ResultMessage {
  string message = 1;
}

message EmptyRequest {}
